# emcfile

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  pyproject.toml  readme.md  setup.cfg
.github/workflows/: run_test.yml
emcfile/: __init__.py  _collector.py  _detector.py  _h5helper.py  _misc.py  _pattern_sone.py  _pattern_sone_file.py  _patterns.py
emcfile/tests/: test_collector.py  test_detector.py  test_h5helper.py  test_patterns.py  utils.py
src/emcfile/: __init__.py  _collector.py  _detector.py  _h5helper.py  _html_display.py  _misc.py  _pattern_sone.py  _pattern_sone_file.py  _patterns.py  _utils.py
tests/: test_collector.py  test_detector.py  test_h5helper.py  test_patterns.py  test_utils.py  utils.py
tutorial/: test_tutorial.py  tutorial.md  tutorial_00.py
