[metadata]
name = emcfile
version = 0.0.0
author = Shen Zhou
author_email = shen34206@hotmail.com
description = This is a high performance python-only library for Expand-Maximize-Compress algorithm.
url = https://github.com/szsdk/emcfile
license = GPLv3

[options]
zip_safe = False
include_package_data = True
packages =
    emcfile
package_dir =
    emcfile = emcfile
install_requires =
    h5py
    numpy
    scipy
    beartype

[options.extras_require]
test =
    pdoc3
    pytest
    pytest-cov
    pytest-html
    pytest-metadata

[isort]
profile = black
line_length = 88

[flake8]
ignore = E203, E266, E501, W503, F403, E402, F401, F811
max-line-length = 88

[pycodestyle]
max-line-length = 88

[tool:pytest]
log_cli = True
# False: no test names
log_cli_level = INFO
# log_cli_level = CRITICAL
# INFO: more information
required_plugins = pytest-html pytest-cov
# addopts = --cov --cov-report html --cov-report term

[coverage:report]
ignore_errors = True

exclude_lines =
    pragma: no cover
    raise NotImplementedError
    raise FileNotFoundError
    raise FileExistsError
    raise ValueError
    return NotImplemented

[coverage:html]
title = emcfile Test Coverage Report
directory = docs/emcfile/htmlcov

[mypy]
ignore_missing_imports = True
allow_redefinition = True
